# gymbuddy

./: .gitignore  AGENTS.md  README.md  build-packages.sh  gymbuddy.spec  index.html  pyproject.toml  requirements.txt  robots.txt  setup.sh  sitemap.xml
.github/workflows/: build-windows.yml
.omo/drafts/: gymbuddy-cleanup.md
.omo/plans/: gymbuddy-cleanup.md
appimage/: AppRun  build-appimage-linuxdeploy.sh  build-appimage-simple.sh  build-appimage.sh
assets/: gymbuddy.desktop  landing-page.html
debian/: changelog  control  gymbuddy-entrypoint  rules
scripts/: build_windows.sh
tests/: conftest.py  test_calculator.py  test_models.py  test_storage.py
workout_tracker/: __init__.py  main.py
workout_tracker/core/: __init__.py  ai_client.py  calculator.py  config.py  models.py  openai_client.py  storage.py
workout_tracker/core/storage/: __init__.py  ai_store.py  base.py  exercise_store.py  goal_store.py  progress_store.py  supplement_store.py  template_store.py  workout_store.py
workout_tracker/ui/: __init__.py  ai_chat_dialog.py  calendar_widget.py  exercise_dialog.py  exercise_list_widget.py  exercise_row.py  goal_dialog.py  main_window.py  progress_chart.py  template_dialog.py  theme.py  workout_dialog.py
workout_tracker/ui/panels/: goals_panel.py  sidebar_panel.py  workout_panel.py
workout_tracker/ui/theme/: __init__.py  colors.py  fonts.py  styles.py
