[project]
name = "workout-tracker"
version = "0.1.0"
description = "Workout tracker with Obsidian vault integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
qt_no_exception_capture = true
asyncio_mode = "auto"